force-app/main/default/objects/Menu_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Category</label>
    <referenceTo>ProductCategory</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>