force-app/main/default/objects/Menu_Item__c/fields/Preparation_Time__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Time__c</fullName>
    <label>Preparation Time (min)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>