force-app/main/default/objects/Menu_Item__c/fields/Spice_Level__c.field-meta.xml
<CustomField>
    <fullName>Spice_Level__c</fullName>
    <label>Spice Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mild</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>