force-app/main/default/objects/Menu_Item__c/validationRules/Price_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &lt;= 0</errorConditionFormula>
    <errorMessage>Price must be greater than zero.</errorMessage>
</ValidationRule>